Wrap bottom nav in bottom app bar to cradle search fab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Flixat</string>
     <string name="popular">Popular</string>
     <string name="in_theaters">In theaters</string>
+    <string name="search">Search</string>
 </resources>
